header section completed

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,1 +1,11 @@
-$color-blue: #8ED4FF;
+$color-blue: #1f2ef7;
+$color-white: #fff;
+$color-black: #000;
+
+$media_xxl: 1440px;
+$media_xl: 1200px;
+$media_lg: 992px;
+$media_md: 768px;
+$media_sm: 576px;
+$media_min: 420px;
+
