--- a/styles/_basic.scss
+++ b/styles/_basic.scss
@@ -6,3 +6,22 @@ body {
     font-family: "Quicksand";
     margin: 0;
 }
+
+h1, h2, h3, h4, h5, h6, ul, p, button { 
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    text-decoration: none;
+    color: unset;
+}
+
+li {
+    list-style: none;
+}
+
+.container {
+    max-width: 1440;
+    margin: 0 auto;
+}
