hero section implementation

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -6,7 +6,8 @@
 .header {
     width: 100%;
     height: 52px;
-    background-color: color.adjust(v.$color-white, $alpha: -0.90);
+
+    // background-color: color.adjust(v.$color-white, $alpha: -0.90);
     // border-bottom: 1px solid v.$color-white;
     border: {
         bottom: {
@@ -15,120 +16,301 @@
             color: v.$color-white;
         }
     }
-   
-    .nav {
-        height: 52px;
-        // display: flex;
-        // justify-content: start;
-        // align-items: start;
-        @include m.d-flex(start, center);
 
-        &__title {
-            height: 100%;
-            width: 254px;
-            border: {
-                right: {
-                    width: 1px;
-                    style: solid;
-                    color: v.$color-white;
-                }
-            }
-            @include m.d-flex(center, center);
+    &__inner {
+        display: flex;
+        justify-content: space-between;
 
-            &-link {
-                font-size: 25px;
-                font-weight: 500;
-                text-transform: uppercase;
-                color: v.$color-white;
-                span {
-                    font-weight: 700;
-                }
-            }
-            @extend %hover-text-black;
-           
-        }
+        .nav {
+            width: 100%;
+            height: 52px;
+            @include m.d-flex(start, center);
 
-        &__links {
-            flex-grow: 1;
-            .list {
-                @include m.d-flex(start, center, nowrap, row, 5vw, 0);
-                padding: 0 0 0 100px;
+            &__title {
+                height: 100%;
+                width: 254px;
+                user-select: none;
 
-                &__item {
-                    
-                    &-link {
-                        position: relative;
-                        font-size: 22px;
-                        font-weight: 400;
+                border: {
+                    right: {
+                        width: 1px;
+                        style: solid;
                         color: v.$color-white;
-                    
-                        &::after {
-                            content: '';
-                            position: absolute;
-                            top: 100%;
-                            left: 50%;
-                            translate: -50%;
-                            width: 0;
-                            height: 2px;
-                            background-color: v.$color-black;
-                            transition: width 0.3s ease; 
-                        }
-                    
-                        &:hover {
+                    }
+                }
+
+                @include m.d-flex(center, center);
+
+                &-link {
+                    font-size: 25px;
+                    font-weight: 500;
+                    text-transform: uppercase;
+                    color: v.$color-white;
+
+                    span {
+                        font-weight: 700;
+                    }
+                }
+
+                @extend %hover-text-black;
+
+            }
+
+            &__links {
+                flex-grow: 1;
+                width: 60%;
+
+                .list {
+                    @include m.d-flex(start, center, nowrap, row, 5vw, 0);
+                    padding: 0 0 0 100px;
+
+                    &__item {
+
+                        &-link {
+                            position: relative;
+                            font-size: 22px;
+                            font-weight: 400;
+                            color: v.$color-white;
+
                             &::after {
-                                width: 100%;
+                                content: '';
+                                position: absolute;
+                                top: 100%;
+                                left: 50%;
+                                translate: -50%;
+                                width: 0;
+                                height: 2px;
+                                background-color: v.$color-white;
+                                transition: width 0.3s ease;
+                            }
+
+                            &:hover {
+                                &::after {
+                                    width: 100%;
+                                }
+                            }
+
+                            @media(max-width:v.$media_m) {
+                                font-size: 20px;
                             }
                         }
 
-                        @media(max-width:v.$media_md){
-                            font-size: 20px;
-                        }
+
+
                     }
-        
-                    
-                    
+
+                    @media (max-width: v.$media_l) {
+                        @include m.d-flex(center, center, nowrap, row, min(4vw), 0);
+                        padding: 0 0 0 0;
+                    }
                 }
-                @media (max-width: v.$media_lg) {
-                    @include m.d-flex(center, center, nowrap, row, min(4vw), 0);
-                    padding: 0 0 0 0;
-                }
+
+
+
             }
 
-            
+            .covid {
+                @include m.d-flex(center, center);
 
-        }
+                height: 100%;
+                padding: 0 30px;
 
-        .covid {
-            @include m.d-flex(center, center);
-
-            height: 100%;
-            padding: 0 30px;
-            border: {
-                left: 1px solid v.$color-white;
-                right: 1px solid v.$color-white;
-            };
-
-            &__link{
-                font-size: 16px;
-                font-weight: 700;
-                color: v.$color-white;
-            }
-            @extend %hover-text-black;
-        }
-
-        .globe {
-            width: 88px;
-            @include m.d-flex(center, center);
-
-            &__link {
-                &-icon {
-                    width: 28px;
-                    height: 28px;
-                    fill: v.$color-white;
+                border: {
+                    left: 1px solid v.$color-white;
+                    right: 1px solid v.$color-white;
                 }
-                @extend %hover-icon-black;
-                
+
+                ;
+
+                &__link {
+                    font-size: 16px;
+                    font-weight: 700;
+                    color: v.$color-white;
+                }
+
+                @extend %hover-text-black;
+            }
+
+            .globe {
+                width: 88px;
+                @include m.d-flex(center, center);
+
+                &__link {
+                    &-icon {
+                        width: 28px;
+                        height: 28px;
+                        fill: v.$color-white;
+                    }
+
+                    @extend %hover-icon-black;
+
+                }
+            }
+        }
+
+    }
+}
+
+@media (max-width: v.$media_l) {
+    .header {
+        &__inner {
+            &__links {
+
+                @include m.d-flex(center, center, nowrap, row, min(4vw), 0);
+                padding: 0 0 0 0;
             }
         }
     }
+}
+
+
+
+
+@media(max-width:v.$media_s) {
+    .header {
+        &__inner {
+            .nav {
+                .__title-link{
+                    font-size: 20px;
+                }
+                &__links {
+                    flex-grow: 1;
+                    width: 45%;
+
+                    .list {
+
+                        &__item {
+
+                            &-link {
+                                font-size: 20px;
+                            }
+                        }
+
+                    }
+                }
+
+                .covid__link {
+                    font-weight: 400;
+                }
+            }
+
+        }
+
+    }
+}
+
+@media(max-width:v.$media_xs) {
+    .header {
+        &__inner {
+            .nav {
+                .__title-link{
+                    font-size: 20px;
+                }
+                &__links {
+                    display: none;
+
+                    .list {
+
+                        &__item {
+
+                            &-link {
+                                font-size: 20px;
+                            }
+                        }
+
+                    }
+                }
+
+                .covid {
+                    display: none;
+                }
+
+                .globe {
+                    display: none;
+                }
+            }
+
+            .burger-button {
+            display: block;
+            @include m.reset-button;
+            @include m.square(48px);
+
+            position: relative;
+
+            &::after {
+                @include m.abs-center;
+                content: '';
+                width: 50%;
+                height: 2px;
+                border-radius: 5px;
+                box-shadow: 0 -8px v.$color-white, 0 8px v.$color-white;
+                background-color: v.$color-white;
+            }
+        }
+
+        }
+
+    }
+}
+
+.mobile-overlay {
+    width: 100%;
+    height: 100%;
+    border: none;
+    padding: 34px 20px;
+    color: v.$color-white;
+    background-color: v.$color-accent;
+    font-size: 22px;
+
+    &:modal {
+        max-width: 100%;
+        max-height: 100%;
+    }
+
+    &__close-button-wrapper{
+        display: flex;
+        justify-content: end;
+    }
+
+    &__list {
+        @include m.d-flex;
+
+        flex-direction: column;
+        row-gap: 22px;
+        align-items: center;
+        min-height: 60vh;
+    }
+}
+
+.cross-button{
+    @include m.reset-button;
+    @include m.square(48px);
+
+    position: relative;
+    border-radius: 12px;
+
+    &:hover {
+        background-color: v.$color-primary;
+    }
+
+    &::before,
+    &::after {
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 7px;
+        width: 70%;
+        height: 2px;
+        background-color: v.$color-white;
+        border-radius: 5px;
+    }
+
+    &::before {
+        rotate: 45deg;
+    }
+
+    &::after{
+        rotate: -45deg;
+    }
+
 }
