--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -9,3 +9,59 @@ nowrap, $direction: row, $column-gap: 0, $row-gap: 0)
     column-gap: $column-gap;
     row-gap: $row-gap;
 }
+
+@mixin font($size: 16, $weight: 400, $color: #FFFFD6, $style: normal) {
+    font: {
+        size: $size;
+        weight: $weight;
+        style: $style;
+    }
+
+    color: $color;
+}
+
+@mixin position($position: relative, $zIndex: 1, $inset: -1, $top-or-bottom: top, $left-or-right: left, $value1: 0, $value2: 0) {
+    position: $position;
+    z-index: $zIndex;
+
+    @if $inset > -1 {
+        inset: $inset;
+    }
+    @else {
+        #{$top-or-bottom}: $value1;
+        #{$left-or-right}: $value2;
+    }
+}
+
+@mixin visually-hidden {
+    position: absolute !important;
+    width: 1px !important;
+    height: 1px !important;
+    margin: -1px !important;
+    border: 0 !important;
+    padding: 0 !important;
+    white-space: nowrap !important;
+    clip-path: inset(100%) !important;
+    clip: rect(0 0 0 0) !important;
+    overflow: hidden !important;
+  }
+
+  @mixin reset-button {
+    padding: 0;
+    background-color: transparent;
+    border: none;
+}
+
+@mixin square($size) {
+    width: $size;
+    aspect-ratio: 1;
+}
+
+@mixin abs-center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+}
+
+
