--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,11 +1,12 @@
-$color-blue: #1f2ef7;
-$color-white: #fff;
-$color-black: #000;
+$color-white: #FFFFD6;
+$color-primary: #E6754B;
+$color-accent: #54A05F;
 
 $media_xxl: 1440px;
 $media_xl: 1200px;
-$media_lg: 992px;
-$media_md: 768px;
-$media_sm: 576px;
+$media_l: 1068px;
+$media_m: 992px;
+$media_s: 768px;
+$media_xs: 576px;
 $media_min: 420px;
 
