--- a/styles/_basic.scss
+++ b/styles/_basic.scss
@@ -3,11 +3,19 @@
 }
 
 body {
-    font-family: "Quicksand";
+    font-family: 'Quicksand', sans-serif;
     margin: 0;
 }
 
-h1, h2, h3, h4, h5, h6, ul, p, button { 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+p,
+button {
     margin: 0;
     padding: 0;
 }
@@ -21,7 +29,20 @@ li {
     list-style: none;
 }
 
+figure, blockquote {
+    margin: 0;
+}
+
+hr {
+    margin: 0;
+    width: 100%;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
 .container {
-    max-width: 1440;
+    max-width: 1440px;
     margin: 0 auto;
 }
