--- a/styles/_cards.scss
+++ b/styles/_cards.scss
@@ -44,14 +44,14 @@
     }
 
     .bg-green-box {
-        background: url("/static/assets/images/bg-1.jpg")
+        background: url("./static/assets/images/bg-1.jpg")
         
     }
     .bg-yellow-box {
-        background: url("/static/assets/images/bg-2.jpg");
+        background: url("./static/assets/images/bg-2.jpg");
     }
     .bg-blue-box {
-        background: url("/static/assets/images/bg-4.jpg");
+        background: url("./static/assets/images/bg-4.jpg");
     }
 
 }
