--- a/styles/_cards.scss
+++ b/styles/_cards.scss
@@ -48,7 +48,7 @@
         
     }
     .bg-yellow-box {
-        background: url("./static/assets/images/bg-2.jpg");
+        background: url("../static/assets/images/bg-2.jpg");
     }
     .bg-blue-box {
         background: url("../static/assets/images/bg-4.jpg");
